// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<Page
  empty={
    Object {
      "content": <p>
        Subaccounts are a good way of managing external client accounts.
      </p>,
      "image": "Users",
      "secondaryAction": Object {
        "content": "Learn more",
        "external": true,
        "to": "https://developers.sparkpost.com/api/subaccounts.html",
      },
      "show": false,
      "title": "Manage your subaccounts",
    }
  }
  primaryAction={
    Object {
      "Component": [Function],
      "content": "Create Subaccount",
      "to": "/account/subaccounts/create",
    }
  }
  title="Subaccounts"
>
  <TableCollection
    columns={
      Array [
        Object {
          "label": "Name",
          "sortKey": "name",
          "width": "40%",
        },
        Object {
          "label": "ID",
          "sortKey": "id",
          "width": "20%",
        },
        Object {
          "label": "Status",
          "sortKey": "status",
          "width": "20%",
        },
      ]
    }
    defaultSortColumn="id"
    defaultSortDirection="desc"
    filterBox={
      Object {
        "exampleModifiers": Array [
          "name",
          "id",
          "status",
        ],
        "itemToStringKeys": Array [
          "name",
          "id",
        ],
        "show": true,
      }
    }
    getRowData={[Function]}
    pagination={true}
    rows={
      Array [
        Object {
          "compliance_status": "active",
          "id": 123,
          "ip_pool": "my_ip_pool",
          "name": "Joe's Garage",
          "status": "active",
        },
        Object {
          "compliance_status": "active",
          "id": 456,
          "name": "SharkPost",
          "status": "active",
        },
        Object {
          "compliance_status": "active",
          "id": 789,
          "name": "Dev Avocado",
          "status": "suspended",
        },
      ]
    }
  />
</Page>
`;

exports[`renders empty state 1`] = `
<Page
  empty={
    Object {
      "content": <p>
        Subaccounts are a good way of managing external client accounts.
      </p>,
      "image": "Users",
      "secondaryAction": Object {
        "content": "Learn more",
        "external": true,
        "to": "https://developers.sparkpost.com/api/subaccounts.html",
      },
      "show": true,
      "title": "Manage your subaccounts",
    }
  }
  primaryAction={
    Object {
      "Component": [Function],
      "content": "Create Subaccount",
      "to": "/account/subaccounts/create",
    }
  }
  title="Subaccounts"
>
  <TableCollection
    columns={
      Array [
        Object {
          "label": "Name",
          "sortKey": "name",
          "width": "40%",
        },
        Object {
          "label": "ID",
          "sortKey": "id",
          "width": "20%",
        },
        Object {
          "label": "Status",
          "sortKey": "status",
          "width": "20%",
        },
      ]
    }
    defaultSortColumn="id"
    defaultSortDirection="desc"
    filterBox={
      Object {
        "exampleModifiers": Array [
          "name",
          "id",
          "status",
        ],
        "itemToStringKeys": Array [
          "name",
          "id",
        ],
        "show": true,
      }
    }
    getRowData={[Function]}
    pagination={true}
    rows={Array []}
  />
</Page>
`;

exports[`renders errors when present 1`] = `
<Page
  empty={
    Object {
      "content": <p>
        Subaccounts are a good way of managing external client accounts.
      </p>,
      "image": "Users",
      "secondaryAction": Object {
        "content": "Learn more",
        "external": true,
        "to": "https://developers.sparkpost.com/api/subaccounts.html",
      },
      "show": false,
      "title": "Manage your subaccounts",
    }
  }
  primaryAction={
    Object {
      "Component": [Function],
      "content": "Create Subaccount",
      "to": "/account/subaccounts/create",
    }
  }
  title="Subaccounts"
>
  <ApiErrorBanner
    errorDetails="Uh oh! It broke."
    message="Sorry, we ran into an error loading your Subaccounts"
    reload={[Function]}
  />
</Page>
`;
